--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <!--Navbar show page-->
     <header id="main_header" class="cf">
       <div class="wrapper_wide">
-        <%= link_to "Americano", books_landing_path, id: "logo" %>
+        <%= link_to "Americano", books_path, id: "logo" %>
         <nav>
           <ul>
             <% if user_signed_in? %>
