--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -62,10 +62,9 @@
             <p class="card-text white-text">Writer : <%= b.writer %></p>
             <p class="card-text white-text">Publihser : <%= b.publisher %></p>
             <p class="card-text white-text">Year : <%= b.published_at.strftime("%Y-%m-%d") %></p>
-            <%= link_to "SOLUTION", exercises_path(id: b.id, chapter: b.exercises.order(:chapter_id).pluck(:chapter_id).uniq[0]), class: "btn btn-default", title: "SOLUTION" %>
-            <%#= link_to book_path(b, page: b.posts.order(:page).pluck(:page).uniq[0]), class: "btn btn-default", title: "QnA" do %>
-              <%#<i class="fa fa-pencil"></i>%>
-            <%# end %>
+            <%= link_to book_path(b, page: b.posts.order(:page).pluck(:page).uniq[0]), class: "btn btn-default" do %>
+              <i class="fa fa-pencil"></i>
+            <% end %>
           </div>
           <!--/.Card content-->
 
