--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -18,6 +18,9 @@ main {
   padding: 1rem 0;
   background-color: transparent;
 }
+.pagination {
+  display: inline-block;
+}
 .collapse > span.email {
   font-size: 16px;
   padding: {
