--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,85 +1,90 @@
-<% posts.each do |p| %>
-  <% if p.children.present? %>
-    <div class="card parent-card" style="margin-bottom:0;">
-  <% else %>
-    <div class="card post-card">
-  <% end %>
-  <%= link_to post_path(p) do %>
-    <div class="card-block">
-      <span calss="post_title"><%= p.title.html_safe %></span>
-        <div class="etc-post">
-          <%= link_to post_replies_path(p.id), class: "index-reply", remote: true do %>
-            <i class="fa fa-comments-o"></i> <%= p.replies.count %>
-          <% end %>
-          <div class="tooltip user-post">
-            <i class="fa fa-user-circle"></i>
-            <span class="tooltiptext"><%= p.user.email %></span>
-          </div>
-          <% if p.user_id == current_user.id %>
-            <%= link_to edit_post_path(p, page: params[:page]), class: "edit-post" do %>
-               <i class="fa fa-edit" aria-hidden="true"></i>
-            <% end %>
-          <% else %>
-            <%= link_to add_post_path(book: p.book, page: params[:page], post: p), class: "edit-post" do %>
-              <i class="fa fa-edit" aria-hidden="true"></i>
-            <% end %>
-          <% end %>
-          <% if p.user_id == current_user.id %>
-            <%= link_to post_path(p, page: params[:page]), method: "DELETE", class: "delete-post", data: { confirm: "정말 삭제하겠습니까?" } do %>
-              <i class="fa fa-trash" aria-hidden="true"></i>
-            <% end %>
-          <% end %>
-        </div>
-      </div>
-      <!-- reply/new -->
-      <div id="post_<%= p.id %>_new"></div>
-      <div id="post_<%= p.id %>"></div>
-    <% end %>
+<% if posts.empty? %>
+  <div class="col-12 col-lg-10 offset-lg-1 text-center">
+    <h5>결과가 없습니다.</h5>
   </div>
-
-  <!-- child post -->
-  <% p.children.each do |c| %>
-    <div class="card add-card" style="background-color:#eeeeee; margin-bottom:0rem">
-      <%= link_to post_path(c) do %>
-        <div class="card-block">
-          <span><b>[추가]</b></span><span> &nbsp; <%= c.title %></span>
-          <div class="etc-post">
-            <%= link_to post_replies_path(c.id), class: "index-reply", remote: true do %>
-              <i class="fa fa-comments-o"></i> <%= c.replies.count %>
+<% else %>
+  <% posts.each do |p| %>
+    <% if p.children.present? %>
+      <div class="card parent-card" style="margin-bottom:0;">
+      <% else %>
+        <div class="card post-card">
+        <% end %>
+        <%= link_to post_path(p) do %>
+          <div class="card-block">
+            <span calss="post_title"><%= p.title.html_safe %></span>
+            <div class="etc-post">
+              <%= link_to post_replies_path(p.id), class: "index-reply", remote: true do %>
+                <i class="fa fa-comments-o"></i> <%= p.replies.count %>
             <% end %>
             <div class="tooltip user-post">
               <i class="fa fa-user-circle"></i>
-              <span class="tooltiptext"><%= c.user.email %></span>
+              <span class="tooltiptext"><%= p.user.email %></span>
             </div>
-            <% if c.user_id == current_user.id %>
-              <%= link_to edit_post_path(c, page: params[:page]), class: "edit-post" do %>
-                 <i class="fa fa-edit" aria-hidden="true"></i>
+            <% if p.user_id == current_user.id %>
+              <%= link_to edit_post_path(p, page: params[:page]), class: "edit-post" do %>
+                <i class="fa fa-edit" aria-hidden="true"></i>
               <% end %>
             <% else %>
-              <%= link_to add_post_path(book: c.book, page: params[:page], post: c), class: "edit-post" do %>
+              <%= link_to add_post_path(book: p.book, page: params[:page], post: p), class: "edit-post" do %>
                 <i class="fa fa-edit" aria-hidden="true"></i>
               <% end %>
             <% end %>
-            <% if c.user_id == current_user.id %>
-              <%= link_to post_path(c, page: params[:page]), method: "DELETE", class: "delete-post", data: { confirm: "정말 삭제하겠습니까?" } do %>
+            <% if p.user_id == current_user.id %>
+              <%= link_to post_path(p, page: params[:page]), method: "DELETE", class: "delete-post", data: { confirm: "정말 삭제하겠습니까?" } do %>
                 <i class="fa fa-trash" aria-hidden="true"></i>
               <% end %>
             <% end %>
+            </div>
           </div>
+          <!-- reply/new -->
+          <div id="post_<%= p.id %>_new"></div>
+          <div id="post_<%= p.id %>"></div>
+        <% end %>
         </div>
-        <!-- reply/new -->
-        <div id="post_<%= c.id %>_new"></div>
-        <div id="post_<%= c.id %>"></div>
-      <% end %>
-    </div>
-  <% end %>
-  <!-- end child post -->
 
-<% end %>
-<script>
-  $(document).ready(function(){
-     hljs.initHighlighting.called = false;
-     hljs.initHighlighting();
-    console.log("123213");
-  });
-</script>
+        <!-- child post -->
+        <% p.children.each do |c| %>
+          <div class="card add-card" style="background-color:#eeeeee; margin-bottom:0rem">
+            <%= link_to post_path(c) do %>
+              <div class="card-block">
+                <span><b>[추가]</b></span><span> &nbsp; <%= c.title %></span>
+                <div class="etc-post">
+                  <%= link_to post_replies_path(c.id), class: "index-reply", remote: true do %>
+                    <i class="fa fa-comments-o"></i> <%= c.replies.count %>
+                <% end %>
+                <div class="tooltip user-post">
+                  <i class="fa fa-user-circle"></i>
+                  <span class="tooltiptext"><%= c.user.email %></span>
+                </div>
+                <% if c.user_id == current_user.id %>
+                  <%= link_to edit_post_path(c, page: params[:page]), class: "edit-post" do %>
+                    <i class="fa fa-edit" aria-hidden="true"></i>
+                  <% end %>
+                <% else %>
+                  <%= link_to add_post_path(book: c.book, page: params[:page], post: c), class: "edit-post" do %>
+                    <i class="fa fa-edit" aria-hidden="true"></i>
+                  <% end %>
+                <% end %>
+                <% if c.user_id == current_user.id %>
+                  <%= link_to post_path(c, page: params[:page]), method: "DELETE", class: "delete-post", data: { confirm: "정말 삭제하겠습니까?" } do %>
+                    <i class="fa fa-trash" aria-hidden="true"></i>
+                  <% end %>
+                <% end %>
+                </div>
+              </div>
+              <!-- reply/new -->
+              <div id="post_<%= c.id %>_new"></div>
+              <div id="post_<%= c.id %>"></div>
+            <% end %>
+          </div>
+        <% end %>
+        <!-- end child post -->
+
+      <% end %>
+    <% end %>
+    <script>
+$(document).ready(function(){
+  hljs.initHighlighting.called = false;
+  hljs.initHighlighting();
+});
+    </script>
