--- a/app/views/posts/like.js.erb
+++ b/app/views/posts/like.js.erb
@@ -1,4 +1,4 @@
-$('#like').html(
-  "<%= escape_javascript(render partial: "posts/like", locals: { post_id: @post_id }) %>"
+$('#post-like').html(
+  "<%= escape_javascript(render partial: "posts/like_sum", locals: { post_id: @post_id }) %>"
 );
 
