my note: new/edit

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -6,7 +6,7 @@
   <%= f.text_field :picture, class: "form-control", placeholder: "Book img url" %>
   <br>
   <div class="text-center">
-    <%= f.submit "SUBMIT", class: "btn btn-default" %>
-    <%= link_to "BACK", books_path, class: "btn btn-primary" %>
+    <%= f.submit "SUBMIT", class: "btn-americano" %>
+    <%= link_to "BACK", books_path, class: "btn-americano" %>
   </div>
 <% end %>
