--- a/app/assets/stylesheets/my_notes.scss
+++ b/app/assets/stylesheets/my_notes.scss
@@ -3,6 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import 'variables';
 
+.icons {
+  margin: 0 5px;
+  color: $light-dark;
+}
 .mynote-content::over {
   background: #eceeef;
 }
@@ -15,9 +19,26 @@ div.row > div.mynote-content > div.mynote-tools {
     color: $dark;
   }
 }
-
-.mynote-draglist {
-
+.card-note {
+  width: 100%;
+  height: 359px;
+  margin: 0;
 }
-
-
+.note-size {
+  width: 100%;
+  height: 359px;
+}
+.note-info {
+  padding: 3rem 1rem;
+  opacity: 0.8;
+  word-break: keep-all;
+  text-align: center;
+  display: table;
+  div {
+    display: table-cell;
+    vertical-align: middle;
+    h5.card-title {
+      color: $light_dark;
+    }
+  }
+}
