--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -56,8 +56,8 @@
           <!--Card content-->
           <div class="book-info book-size">
             <!--Title-->
-            <h5 class="card-title light-blue-text"><strong><%= b.title %></strong></h5>
-           <br>
+            <h5 class="card-title"><strong><%= b.title %></strong></h5>
+            <br>
             <!--Text-->
             <p class="card-text white-text">Writer : <%= b.writer %></p>
             <p class="card-text white-text">Publihser : <%= b.publisher %></p>
