--- a/app/views/my_notes/index.html.erb
+++ b/app/views/my_notes/index.html.erb
@@ -1,7 +1,3 @@
-<div id="banner" class="booklist_banner" >
-  <h1>Discover your new favorite book</h1>
-</div>
-
 <!--Content-->
 <div class="container">
   <div class="row">
@@ -10,7 +6,7 @@
     <% if user_signed_in?  %>
       <div class="col-lg-3 col-md-6 book-margin">
         <!--Card-->
-        <%= link_to new_book_path, class: "new-btn" do %>
+        <%= link_to new_my_note_path, class: "new-btn" do %>
           <div class="card-book-new book-size">
             <h4><i class="fa fa-plus-square-o" aria-hidden="true"></i> NEW NOTE </h4>
           </div>
@@ -23,38 +19,36 @@
     <% @my_notes.each do |n| %>
       <div class="col-lg-3 col-md-6 book-margin">
         <!--Card-->
-        <div class="card card-book">
+        <%= link_to my_note_path(n) do %>
+          <div class="card card-book card-note">
 
-          <!--Card image-->
-          <%#= image_tag asset_path("book.png"), class: "book-size", alt: "" %>
-          <!--/.Card image-->
+            <!--Card image-->
+            <%#= image_tag asset_path("book.png"), class: "book-size", alt: "" %>
+            <!--/.Card image-->
 
-          <!--Card content-->
-          <div class="book-info book-size">
-            <!--Title-->
-            <h5 class="card-title light-blue-text"><strong><%= n.title %></strong></h5>
-           <br>
-            <!--Text-->
-            <%#= link_to "SOLUTION", exercises_path(id: b.id, chapter: b.exercises.order(:chapter_id).pluck(:chapter_id).uniq[0]), class: "btn btn-default", title: "SOLUTION" %>
-            <%#= link_to book_path(b, page: b.posts.order(:page).pluck(:page).uniq[0]), class: "btn btn-default", title: "QnA" do %>
-              <%#<i class="fa fa-pencil"></i>%>
-            <%# end %>
+            <!--Card content-->
+            <div class="note-info note-size">
+              <!--Title-->
+              <div class="table-cell">
+                <h5 class="card-title gray-text"><strong><%= n.title %></strong></h5>
+              <!--Text-->
+                <%= link_to edit_my_note_path(n) do %>
+                  <i class="fa fa-pencil icons"></i>
+                <% end %>
+                <%= link_to my_note_path(n), method: 'DELETE', data: {confirm: "Are You Sure?"} do %>
+                  <i class="fa fa-trash icons"></i>
+                <% end %>
+              </div>
+            </div>
           </div>
           <!--/.Card content-->
+        <% end %>
 
-        </div>
         <!--/.Card-->
 
       </div>
       <!-- columnns -->
     <% end %>
-  </div>
-
-  <div class="pagination">
-    <span class="previous_page disabled">Previous</span>
-    <em class="current">1</em>
-    <a href="#">2</a>
-    <a class="next_page" href="#">Next</a>
   </div>
 </div>
 
