--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,10 +4,11 @@
       <div class="col-lg-10 offset-lg-1">
         <%= @post.content.html_safe %>
         <br><hr>
-        <div class="etc-post">
+        <div class="etc-post etc-left">
           <%= render partial: 'posts/like_sum', locals: { post: @post }, remote: true%>
         </div>
         <div class="etc-post etc-right">
+          <span style="cursor:pointer" data-toggle="modal" data-target="#scrapModal">Scrap</span>
           <% if @post.user_id == current_user.id %>
             <%= link_to post_path(@post, page: params[:page]), method: "DELETE", class: "delete-post", data: { confirm: "정말 삭제하겠습니까?" } do %>
               <i class="fa fa-trash" aria-hidden="true"></i>
@@ -18,18 +19,6 @@
           <%= link_to new_post_reply_path(@post.id), class: "new-reply", remote: true do %>
             <i class="fa fa-plus-square" aria-hidden="true"></i>
           <% end %>
-          &nbsp;
-          <span id="like">
-            <% if Like.where(post_id: @post.id, user_id: current_user.id).empty?  %>
-              <%= link_to like_post_path(id: @post.id), method: "post", class: "new-reply", remote: true do %>
-                내노트에 추가 +
-              <% end %>
-            <% else %>
-              <%= link_to like_post_path(id: @post.id), method: "post", class: "new-reply", remote: true do %>
-                내노트에서 제거 -
-              <% end %>
-            <% end %>
-          </span>
           &nbsp;
 
           <div class="tooltip user-post">
@@ -47,6 +36,30 @@
       </div>
     </div>
   </div>
+
+  <!-- Modal -->
+  <div class="modal fade scrap-modal" id="scrapModal" role="dialog">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Choose your note</h4>
+        </div>
+        <div class="modal-body">
+          <center>
+            <select>
+              <%= options_for_select(@user_note, :title) %>
+            </select>
+            <%= link_to scrap_path do%>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <% end %>
+          </center>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 </main>
 <script>
   $(document).ready(function(){
