--- a/app/views/my_notes/_index.html.erb
+++ b/app/views/my_notes/_index.html.erb
@@ -1,7 +1,7 @@
-<% my_post.each do |post|%>
-  <div class="row">
+<% my_posts.each do |post| %>
+  <div class="row my-note-post">
     <div class="col-lg-10 offset-lg-1 mynote-content" id="mynote-content-<%= post.id %>">
-      <div class="mynote-tools" id="delete_<%= post.id %>">
+      <div class="mynote-tools" id="delete_<%= post.id %>" >
         <span id="like">
           <% if post.user_id == current_user.id %>
             <%= link_to edit_post_path(post, page: params[:page]), class: "edit-post" do %>
@@ -9,12 +9,12 @@
               <i class="fa fa-edit" aria-hidden="true"></i>
             <% end %>
           <% else %>
-            <%= link_to add_post_path(book: post.book, page: params[:page], post: p), class: "edit-post" do %>
+            <%= link_to add_post_path(book: post.book, page: params[:page], post: post), class: "edit-post" do %>
               &nbsp;
               <i class="fa fa-edit" aria-hidden="true"></i>
             <% end %>
           <% end %>
-          <%= link_to my_note_path(id: post.id), method: "delete", remote: true do %>
+          <%= link_to delete_post_path(my_note_id: my_note, id: post.id), method: 'POST', remote: true, data: {confirm: "Are You Sure?"} do %>
             <i class="fa fa-remove tools-color" aria-hidden="true"></i>
           <% end %>
         </span>
@@ -24,4 +24,3 @@
     </div>
   </div>
 <% end %>
-
