--- a/app/views/my_notes/show.html.erb
+++ b/app/views/my_notes/show.html.erb
@@ -1,31 +1,6 @@
 <main>
   <div class="container main mynote">
-    <% @my_posts.each do |post| %>
-      <div class="row">
-        <div class="col-lg-10 offset-lg-1 mynote-content" id="mynote-content-<%= post.id %>">
-          <div class="mynote-tools" id="delete_<%= post.id %>" >
-            <span id="like">
-              <% if post.user_id == current_user.id %>
-                <%= link_to edit_post_path(post, page: params[:page]), class: "edit-post" do %>
-                  &nbsp;
-                  <i class="fa fa-edit" aria-hidden="true"></i>
-                <% end %>
-              <% else %>
-                <%= link_to add_post_path(book: post.book, page: params[:page], post: post), class: "edit-post" do %>
-                  &nbsp;
-                  <i class="fa fa-edit" aria-hidden="true"></i>
-                <% end %>
-              <% end %>
-              <%= link_to delete_post_path(my_note_id: @my_note, id: post), method: "delete", remote: true do %>
-                <i class="fa fa-remove tools-color" aria-hidden="true"></i>
-              <% end %>
-            </span>
-          </div>
-          <br>
-          <%= post.content.html_safe  %>
-        </div>
-      </div>
-    <% end %>
+    <%= render partial: 'index', locals: { my_posts: @my_posts, my_note: @my_note.id } %>
   </div>
 </main>
 <script>
