--- a/app/views/my_notes/_index.html.erb
+++ b/app/views/my_notes/_index.html.erb
@@ -1,26 +1,32 @@
-<% my_posts.each do |post| %>
-  <div class="row my-note-post">
-    <div class="col-lg-10 offset-lg-1 mynote-content" id="mynote-content-<%= post.id %>">
-      <div class="mynote-tools" id="delete_<%= post.id %>" >
-        <span id="like">
-          <% if post.user_id == current_user.id %>
-            <%= link_to edit_post_path(post, page: params[:page]), class: "edit-post" do %>
-              &nbsp;
-              <i class="fa fa-edit" aria-hidden="true"></i>
-            <% end %>
-          <% else %>
-            <%= link_to add_post_path(book: post.book, page: params[:page], post: post), class: "edit-post" do %>
-              &nbsp;
-              <i class="fa fa-edit" aria-hidden="true"></i>
-            <% end %>
-          <% end %>
-          <%= link_to delete_post_path(my_note_id: my_note, id: post.id), method: 'POST', remote: true, data: {confirm: "Are You Sure?"} do %>
-            <i class="fa fa-remove tools-color" aria-hidden="true"></i>
-          <% end %>
-        </span>
+<!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
+<ul id="my-note-posts" data-update-url= "<%= sort_my_notes_url %>">
+  <% my_posts.each do |post_note| %>
+    <%= content_tag_for :li, post_note do %>
+      <div class="row my-note-post">
+        <div class="col-lg-10 offset-lg-1 mynote-content" id="mynote-content-<%= post_note.post_id %>">
+          <div class="mynote-tools" id="delete_<%= post_note.post_id %>" >
+            <span id="like">
+              <% if post_note.pick_post.user_id == current_user.id %>
+                <%= link_to edit_post_path(post_note.pick_note, page: params[:page]), class: "edit-post" do %>
+                  &nbsp;
+                  <i class="fa fa-edit" aria-hidden="true"></i>
+                <% end %>
+              <% else %>
+                <%= link_to add_post_path(book: post_note.pick_post.book, page: params[:page], post: post_note.pick_post), class: "edit-post" do %>
+                  &nbsp;
+                  <i class="fa fa-edit" aria-hidden="true"></i>
+                <% end %>
+              <% end %>
+              <%= link_to delete_post_path(my_note_id: my_note, id: post_note.post_id), method: 'POST', remote: true, data: {confirm: "Are You Sure?"} do %>
+                <i class="fa fa-remove tools-color" aria-hidden="true"></i>
+              <% end %>
+            </span>
+          </div>
+          <br>
+          <%= post_note.pick_post.content.html_safe  %>
+        </div>
       </div>
-      <br>
-      <%= post.content.html_safe  %>
-    </div>
-  </div>
-<% end %>
+      </li>
+    <% end %>
+  <% end %>
+</ul>
