--- a/app/assets/stylesheets/my_notes.scss
+++ b/app/assets/stylesheets/my_notes.scss
@@ -21,15 +21,24 @@ div.row > div.mynote-content > div.mynote-tools {
   height: 359px;
   margin: 0;
 }
+.read {
+  background-color: #e8f5e9;
+}
 .mynote-content:hover {
   background-color: #eee;
 }
+.card-top-menu {
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  text-align: right;
+}
 .note-size {
   width: 100%;
-  height: 359px;
+  height: 319px;
 }
 .note-info {
-  padding: 3rem 1rem;
+  padding: 3rem 1rem 4rem;
   opacity: 0.8;
   word-break: keep-all;
   text-align: center;
