--- a/app/views/my_notes/show.html.erb
+++ b/app/views/my_notes/show.html.erb
@@ -1,11 +1,7 @@
 <main>
-
-<div class="container main mynote">
-  <%= render partial: 'index', locals: { my_posts: @my_posts, my_note: @my_note.id } %>
-</div>
-
-</head>
-
+  <div class="container main mynote">
+    <%= render partial: 'index', locals: { my_posts: @my_posts, my_note: @my_note.id, authority: @authority } %>
+  </div>
 </main>
 
 <script>
