--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js">
   <head>
-    <title>Americano</title>
+    <title>Yeahap!</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -16,7 +16,7 @@
     <!--Navbar show page-->
     <header id="main_header" class="cf">
       <div class="wrapper_wide">
-        <%= link_to "Americano", books_path, id: "logo" %>
+        <%= link_to "Yeahap", root_path, id: "logo" %>
         <nav>
           <ul>
             <% if user_signed_in? %>
