--- a/app/views/yeahaps/index.html.erb
+++ b/app/views/yeahaps/index.html.erb
@@ -3,17 +3,19 @@
 </div>
 
 
-<!-- Modal -->
+<!--edit Modal -->
 <div class="modal fade scrap-modal" id="editModal" role="dialog">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Choose your Friend </h4>
+        <h4 class="modal-title">Edit yeahap!</h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
       <div class="modal-body">
         <center>
-          say hi.
+          <div class="edit-form">
+              there's no choosen yeahap.
+          </div>
         </center>
       </div>
     </div>
