--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <header id="main_header" class="cf">
       <div class="wrapper_wide">
         <%= link_to root_path do %>
-          <%= image_tag "#{asset_path("yeahap.png")}", style: "height:25px" %>
+          <%= image_tag asset_path("yeahap.png"), style: "height:25px" %>
         <% end %>
         <nav>
           <ul>
