db 정리 & yeahapbox추가 & user after create

--- a/app/assets/stylesheets/yeahaps.scss
+++ b/app/assets/stylesheets/yeahaps.scss
@@ -31,3 +31,13 @@
   visibility: visible;
 }
 
+
+
+.ellipsis {
+  text-overflow:ellipsis;
+  white-space:nowrap;
+  word-wrap:normal;
+  width:185px;
+  overflow:hidden;
+}
+
