--- a/app/views/yeahaps/_index.html.erb
+++ b/app/views/yeahaps/_index.html.erb
@@ -3,8 +3,8 @@
     <div class="page-block tooltip">
       <%= link_to y.page.url, class: "list-group-item list-group-item-action flex-column align-items-start" do %>
         <%= image_tag "https://www.google.com/s2/favicons?domain=#{y.page.url}", onerror: "this.src='#{asset_path("favicon.ico")}'"%>
-        <div><%= y.content %></div>
-        <small class="text-muted">
+        <span><%= y.content %></span>
+        <small class="text-muted ellipsis" >
           <%= y.page.url %>
         </small>
       <% end %>
