in main, yeahap -> yeahapbox

--- a/app/views/yeahaps/index.html.erb
+++ b/app/views/yeahaps/index.html.erb
@@ -1,7 +1,6 @@
 <div class="container yeahap-list">
-  <%= render partial: 'index', locals: { yeahaps: @yeahaps } %>
+  <%= render partial: 'index', locals: { box: @box } %>
 </div>
-
 
 <!--edit Modal -->
 <div class="modal fade scrap-modal" id="editModal" role="dialog">
