--- a/app/assets/stylesheets/yeahaps.scss
+++ b/app/assets/stylesheets/yeahaps.scss
@@ -10,6 +10,11 @@
   font-size: 18px;
   font-weight: bold;
 }
+.box-title-count {
+  font-size: 15px;
+  color: #aaa;
+  font-weight: bold;
+}
 
 .tooltip {
   z-index: 1;
