--- a/app/views/my_pages/friend.js.erb
+++ b/app/views/my_pages/friend.js.erb
@@ -1,6 +1,7 @@
 if(<%= @is_present %> == true) {
   $('ul.friends_list').html(
-    "<%= escape_javascript (render partial: 'my_pages/list.html.erb', locals: { followers: @followers, followees: @followees }) %>"
+    "<%= escape_javascript (render partial: 'my_pages/list.html.erb', locals: { followees: @followees }) %>"
   );
+  $('span.following').text(<%= @count %>);
 }
 $('input#email').val("<%= @message %>");
