--- a/app/views/yeahapboxes/new.html.erb
+++ b/app/views/yeahapboxes/new.html.erb
@@ -2,7 +2,7 @@
   <div class="container main">
     <div class="row">
       <div class="col-lg-10 offset-lg-1">
-        <%= render partial: 'form', locals: { page: @page } %>
+        <%= render partial: 'form', locals: { yeahapbox: @yeahapbox } %>
       </div>
     </div>
   </div>
