--- a/app/views/yeahaps/index.html.erb
+++ b/app/views/yeahaps/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container yeahap-list">
-  <%= render partial: 'index', locals: { box: @box } %>
+  <%= render partial: 'index', locals: { yeahapbox: @yeahapbox } %>
 </div>
 
 <!--edit Modal -->
