--- a/app/assets/stylesheets/yeahapboxes.scss
+++ b/app/assets/stylesheets/yeahapboxes.scss
@@ -1,3 +1,6 @@
-// Place all the styles related to the yeahapbox controller here.
+// Place all the styles related to the yeahapboxes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.yeahapbox-row {
+  margin-bottom: 2rem;
+}
