--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -52,7 +52,7 @@ div.post-card {
 .btn-americano {
   border: none;
   background-color: white;
-  color: $light_dark;
+  color: orange;
   margin: 0px 5px;
 }
 
