--- a/app/views/yeahaps/index.html.erb
+++ b/app/views/yeahaps/index.html.erb
@@ -7,17 +7,15 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Edit yeahap!</h4>
+        <h4 class="modal-title"><b>Description</b></h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
       <div class="modal-body">
         <center>
           <div class="edit-form">
-              there's no choosen yeahap.
           </div>
         </center>
       </div>
     </div>
   </div>
 </div>
-
